lint, test and publish on merge

--- a/lib/package.json
+++ b/lib/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/HornOfSilicon/far-wadaad",
   "author": "HornOfSilicon",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .js --quiet",
