--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "far-wadaad",
+  "name": "@hornofsilicon/far-wadaad",
   "version": "1.0.0",
   "description": "Tools for Somali far Wadaad script",
   "main": "index.js",
