--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -39,5 +39,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd lib
+          echo build no: $BUILD_NUMBER
           yarn version --new-version 1.0.$BUILD_NUMBER
           yarn publish
