--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,4 +40,4 @@ jobs:
         run: |
           cd lib
           echo build no: ${GITHUB_RUN_NUMBER}
-          yarn publish --new-version 1.0.${GITHUB_RUN_NUMBER}
+          yarn publish --new-version 1.0.${GITHUB_RUN_NUMBER} --no-git-tag-version
