--- a/lib/package.json
+++ b/lib/package.json
@@ -7,7 +7,8 @@
   "author": "HornOfSilicon",
   "license": "MIT",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/",
+     "access": "public"
   },
   "scripts": {
     "test": "jest",
